--- a/index.html
+++ b/index.html
@@ -43,11 +43,19 @@
           <ul class="header-contacts-list list">
             <li class="header-contacts-item">
               <a href="mailto:info@devstudio.com" class="link"
-                >info@devstudio.com</a
+                ><svg class="contacts-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="header-contacts-item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="link"
+                ><svg class="contacts-icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
