--- a/portfolio.html
+++ b/portfolio.html
@@ -28,10 +28,10 @@
 
             <ul class="site-nav-list list">
               <li class="site-nav-item">
-                <a href="./index.html" class="link">Студия</a>
+                <a href="./index.html" class="link current">Студия</a>
               </li>
               <li class="site-nav-item">
-                <a href="./portfolio.html" class="link current">Портфолио</a>
+                <a href="./portfolio.html" class="link">Портфолио</a>
               </li>
               <li class="site-nav-item">
                 <a href="#" class="link">Контакты</a>
@@ -42,11 +42,19 @@
           <ul class="header-contacts-list list">
             <li class="header-contacts-item">
               <a href="mailto:info@devstudio.com" class="link"
-                >info@devstudio.com</a
+                ><svg class="contacts-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
               >
             </li>
             <li class="header-contacts-item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="link"
+                ><svg class="contacts-icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
