Made icons in the advantages section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
           <!-- <h2 class="advantages-title section-title">Наши преймущества</h2> -->
           <ul class="list advantages-list">
             <li class="advantages-item">
+              <div class="advantages-item-box">
+                <svg class="advantages-icon">
+                  <use href="/images/symbol-defs.svg#icon-Group123"></use>
+                </svg>
+              </div>
+
               <h3 class="advantages-list-title">Внимание к деталям</h3>
               <p class="advantages-list-text">
                 Идейные соображения, а также начало повседневной работы по
@@ -86,6 +92,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-box">
+                <svg class="advantages-icon">
+                  <use href="/images/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Пунктуальность</h3>
               <p class="advantages-list-text">
                 Задача организации, в особенности же рамки и место обучения
@@ -93,6 +104,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-box">
+                <svg class="advantages-icon">
+                  <use href="/images/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Планирование</h3>
               <p class="advantages-list-text">
                 Равным образом консультация с широким активом в значительной
@@ -100,6 +116,11 @@
               </p>
             </li>
             <li class="advantages-item">
+              <div class="advantages-item-box">
+                <svg class="advantages-icon">
+                  <use href="/images/symbol-defs.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="advantages-list-title">Современные технологии</h3>
               <p class="advantages-list-text">
                 Значимость этих проблем настолько очевидна, что реализация
