Made the clients section

--- a/index.html
+++ b/index.html
@@ -228,6 +228,76 @@
           </ul>
         </div>
       </section>
+
+      <!-- Постоянные клиенты -->
+
+      <section class="section clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+
+          <ul class="list clients-list">
+            <li class="clients-item">
+              <a href="#" class="link clients-link">
+                <div class="clients-item-box">
+                  <svg class="clients-icon">
+                    <use href="/images/symbol-defs.svg#icon-group"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#" class="link clients-link">
+                <div class="clients-item-box">
+                  <svg class="clients-icon">
+                    <use href="/images/symbol-defs.svg#icon-group-1"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#" class="link">
+                <div class="clients-item-box">
+                  <svg class="clients-icon">
+                    <use href="/images/symbol-defs.svg#icon-group-2"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#" class="link">
+                <div class="clients-item-box">
+                  <svg class="clients-icon">
+                    <use href="/images/symbol-defs.svg#icon-group-3"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#" class="link">
+                <div class="clients-item-box">
+                  <svg class="clients-icon">
+                    <use href="/images/symbol-defs.svg#icon-group-4"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="clients-item">
+              <a href="#" class="link">
+                <div class="clients-item-box">
+                  <svg class="clients-icon">
+                    <use href="/images/symbol-defs.svg#icon-group-5"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!-- Футер -->
