--- a/index.html
+++ b/index.html
@@ -223,6 +223,48 @@
               <div class="team-card-text">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p>UI Designer</p>
+
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <svg class="social-icon">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <svg class="social-icon">
+                        <use
+                          href="/images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <svg class="social-icon">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram-2"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <svg class="social-icon">
+                        <use
+                          href="/images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -237,7 +279,7 @@
 
           <ul class="list clients-list">
             <li class="clients-item">
-              <a href="#" class="link clients-link">
+              <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
                     <use href="/images/symbol-defs.svg#icon-group"></use>
@@ -247,7 +289,7 @@
             </li>
 
             <li class="clients-item">
-              <a href="#" class="link clients-link">
+              <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
                     <use href="/images/symbol-defs.svg#icon-group-1"></use>
