--- a/index.html
+++ b/index.html
@@ -227,41 +227,49 @@
                 <ul class="list social-list">
                   <li class="social-item">
                     <a href="#" class="link">
-                      <svg class="social-icon">
-                        <use
-                          href="/images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
-                      </svg>
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </div>
                     </a>
                   </li>
 
                   <li class="social-item">
                     <a href="#" class="link">
-                      <svg class="social-icon">
-                        <use
-                          href="/images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
-                      </svg>
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </div>
                     </a>
                   </li>
 
                   <li class="social-item">
                     <a href="#" class="link">
-                      <svg class="social-icon">
-                        <use
-                          href="/images/symbol-defs.svg#icon-instagram-2"
-                        ></use>
-                      </svg>
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </div>
                     </a>
                   </li>
 
                   <li class="social-item">
                     <a href="#" class="link">
-                      <svg class="social-icon">
-                        <use
-                          href="/images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
-                      </svg>
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </div>
                     </a>
                   </li>
                 </ul>
