Added team social-links

--- a/index.html
+++ b/index.html
@@ -187,6 +187,56 @@
               <div class="team-card-text">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p>Product Designer</p>
+
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -199,6 +249,56 @@
               <div class="team-card-text">
                 <h3 class="title">Ольга Репина</h3>
                 <p>Frontend Developer</p>
+
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -211,6 +311,56 @@
               <div class="team-card-text">
                 <h3 class="title">Николай Тарасов</h3>
                 <p>Marketing</p>
+
+                <ul class="list social-list">
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-instagram-2"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-twitter-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-facebook-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+
+                  <li class="social-item">
+                    <a href="#" class="link">
+                      <div class="social-box">
+                        <svg class="social-icon">
+                          <use
+                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                          ></use>
+                        </svg>
+                      </div>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
