--- a/index.html
+++ b/index.html
@@ -503,19 +503,67 @@
     <!-- Футер -->
 
     <footer class="page-footer">
-      <div class="container">
-        <a href="./index.html" class="link logo"><span>Web</span>Studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="footer-contacts list">
-          <li class="footer-contacts-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="footer-contacts-item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-          </li>
-        </ul>
+      <div class="footer-info container">
+        <div class="footer-contacts">
+          <a href="./index.html" class="link logo"><span>Web</span>Studio</a>
+          <address>г. Киев, пр-т Леси Украинки, 26</address>
+          <ul class="footer-contacts list">
+            <li class="footer-contacts-item">
+              <a href="mailto:info@devstudio.com" class="link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="footer-contacts-item">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-links">
+          <h2>Присоединяйтесь</h2>
+
+          <ul class="list social-list">
+            <li class="social-item">
+              <a href="#" class="link">
+                <div class="social-box">
+                  <svg class="social-icon">
+                    <use href="/images/symbol-defs.svg#icon-instagram-2"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="social-item">
+              <a href="#" class="link">
+                <div class="social-box">
+                  <svg class="social-icon">
+                    <use href="/images/symbol-defs.svg#icon-twitter-1"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="social-item">
+              <a href="#" class="link">
+                <div class="social-box">
+                  <svg class="social-icon">
+                    <use href="/images/symbol-defs.svg#icon-facebook-1"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+
+            <li class="social-item">
+              <a href="#" class="link">
+                <div class="social-box">
+                  <svg class="social-icon">
+                    <use href="/images/symbol-defs.svg#icon-linkedin-1"></use>
+                  </svg>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
