Changed way to icons
Added dots

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li class="advantages-item">
               <div class="advantages-item-box">
                 <svg class="advantages-icon">
-                  <use href="/images/symbol-defs.svg#icon-Group123"></use>
+                  <use href="./images/symbol-defs.svg#icon-Group123"></use>
                 </svg>
               </div>
 
@@ -94,7 +94,7 @@
             <li class="advantages-item">
               <div class="advantages-item-box">
                 <svg class="advantages-icon">
-                  <use href="/images/symbol-defs.svg#icon-clock-1"></use>
+                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Пунктуальность</h3>
@@ -106,7 +106,7 @@
             <li class="advantages-item">
               <div class="advantages-item-box">
                 <svg class="advantages-icon">
-                  <use href="/images/symbol-defs.svg#icon-diagram-1"></use>
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Планирование</h3>
@@ -118,7 +118,7 @@
             <li class="advantages-item">
               <div class="advantages-item-box">
                 <svg class="advantages-icon">
-                  <use href="/images/symbol-defs.svg#icon-astronaut-1"></use>
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="advantages-list-title">Современные технологии</h3>
@@ -194,7 +194,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram-2"
+                            href="./images/symbol-defs.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </div>
@@ -206,7 +206,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter-1"
+                            href="./images/symbol-defs.svg#icon-twitter-1"
                           ></use>
                         </svg>
                       </div>
@@ -218,7 +218,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook-1"
+                            href="./images/symbol-defs.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </div>
@@ -230,7 +230,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </div>
@@ -256,7 +256,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram-2"
+                            href="./images/symbol-defs.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </div>
@@ -268,7 +268,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter-1"
+                            href="./images/symbol-defs.svg#icon-twitter-1"
                           ></use>
                         </svg>
                       </div>
@@ -280,7 +280,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook-1"
+                            href="./images/symbol-defs.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </div>
@@ -292,7 +292,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </div>
@@ -318,7 +318,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram-2"
+                            href="./images/symbol-defs.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </div>
@@ -330,7 +330,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter-1"
+                            href="./images/symbol-defs.svg#icon-twitter-1"
                           ></use>
                         </svg>
                       </div>
@@ -342,7 +342,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook-1"
+                            href="./images/symbol-defs.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </div>
@@ -354,7 +354,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </div>
@@ -380,7 +380,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-instagram-2"
+                            href="./images/symbol-defs.svg#icon-instagram-2"
                           ></use>
                         </svg>
                       </div>
@@ -392,7 +392,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-twitter-1"
+                            href="./images/symbol-defs.svg#icon-twitter-1"
                           ></use>
                         </svg>
                       </div>
@@ -404,7 +404,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-facebook-1"
+                            href="./images/symbol-defs.svg#icon-facebook-1"
                           ></use>
                         </svg>
                       </div>
@@ -416,7 +416,7 @@
                       <div class="social-box">
                         <svg class="social-icon">
                           <use
-                            href="/images/symbol-defs.svg#icon-linkedin-1"
+                            href="./images/symbol-defs.svg#icon-linkedin-1"
                           ></use>
                         </svg>
                       </div>
@@ -440,7 +440,7 @@
               <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
-                    <use href="/images/symbol-defs.svg#icon-group"></use>
+                    <use href="./images/symbol-defs.svg#icon-group"></use>
                   </svg>
                 </div>
               </a>
@@ -450,7 +450,7 @@
               <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
-                    <use href="/images/symbol-defs.svg#icon-group-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-group-1"></use>
                   </svg>
                 </div>
               </a>
@@ -460,7 +460,7 @@
               <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
-                    <use href="/images/symbol-defs.svg#icon-group-2"></use>
+                    <use href="./images/symbol-defs.svg#icon-group-2"></use>
                   </svg>
                 </div>
               </a>
@@ -470,7 +470,7 @@
               <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
-                    <use href="/images/symbol-defs.svg#icon-group-3"></use>
+                    <use href="./images/symbol-defs.svg#icon-group-3"></use>
                   </svg>
                 </div>
               </a>
@@ -480,7 +480,7 @@
               <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
-                    <use href="/images/symbol-defs.svg#icon-group-4"></use>
+                    <use href="./images/symbol-defs.svg#icon-group-4"></use>
                   </svg>
                 </div>
               </a>
@@ -490,7 +490,7 @@
               <a href="#" class="link">
                 <div class="clients-item-box">
                   <svg class="clients-icon">
-                    <use href="/images/symbol-defs.svg#icon-group-5"></use>
+                    <use href="./images/symbol-defs.svg#icon-group-5"></use>
                   </svg>
                 </div>
               </a>
@@ -527,7 +527,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-instagram-2"></use>
+                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                   </svg>
                 </div>
               </a>
@@ -537,7 +537,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                   </svg>
                 </div>
               </a>
@@ -547,7 +547,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                   </svg>
                 </div>
               </a>
@@ -557,7 +557,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                   </svg>
                 </div>
               </a>
