--- a/portfolio.html
+++ b/portfolio.html
@@ -254,7 +254,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-instagram-2"></use>
+                    <use href="./images/symbol-defs.svg#icon-instagram-2"></use>
                   </svg>
                 </div>
               </a>
@@ -264,7 +264,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-twitter-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
                   </svg>
                 </div>
               </a>
@@ -274,7 +274,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-facebook-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
                   </svg>
                 </div>
               </a>
@@ -284,7 +284,7 @@
               <a href="#" class="link">
                 <div class="social-box">
                   <svg class="social-icon">
-                    <use href="/images/symbol-defs.svg#icon-linkedin-1"></use>
+                    <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
                   </svg>
                 </div>
               </a>
